--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,16 @@
 {
-  "torizon_psswd": "",
-  "torizon_login": "",
-  "torizon_ip": "",
-  "torizon_ssh_port": "",
-  "host_ip": "",
+  "torizon_psswd": "torizon",
+  "torizon_login": "torizon",
+  "torizon_ip": "192.168.31.242",
+  "torizon_ssh_port": "22",
+  "host_ip": "192.168.31.202",
   "torizon_workspace": "${workspaceFolder}",
   "torizon_debug_ssh_port": "6502",
   "torizon_debug_port1": "6512",
   "torizon_debug_port2": "",
   "torizon_debug_port3": "",
-  "torizon_gpu": "",
-  "torizon_arch": "",
+  "torizon_gpu": "-imx8",
+  "torizon_arch": "aarch64",
   "wait_sync": "1",
   "torizon_run_as": "torizon",
   "torizon_app_root": "/home/torizon/app",
@@ -18,5 +18,17 @@
   "tcb.packageName": "pythonTOS6",
   "tcb.version": "3.11.0",
   "torizon.gpuPrefixRC": true,
-  "python.defaultInterpreterPath": "./.venv/bin/python3"
+  "python.defaultInterpreterPath": "./.venv/bin/python3",
+  "docker.environment": {
+    "DOCKER_HOST": "tcp://192.168.31.242:2375",
+    "DEBUG_SSH_PORT": "2222",
+    "DEBUG_PORT1": "2222",
+    "DEBUG_PORT2": "2223",
+    "DEBUG_PORT3": "2224"
+  },
+  "docker_login": "andreriesco",
+  "docker_registry": "registry-1.docker.io",
+  "docker_password": "secret",
+  "tcb.clientId": "tzn_api_89d2781c-fc9a-44b6-8deb-4db026aaa0b4_wxFFCE",
+  "tcb.clientSecret": "secret"
 }
