Update to TOS 7

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -326,7 +326,7 @@
                 "$tsc"
             ],
             "dependsOrder": "sequence",
-        "dependsOn": [],
+            "dependsOn": [],
             "icon": {
                 "id": "git-branch",
                 "color": "terminal.ansiGreen"
@@ -342,14 +342,13 @@
         {
             "label": "try-update-template",
             "detail": "This task has automation steps to update the project\nbased on the template used to create it.",
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/projectUpdater.ps1",
+                "${workspaceFolder}/.conf/project-updater.xsh",
                 "${workspaceFolder}",
                 "${workspaceFolderBasename}",
                 "0"
@@ -373,14 +372,13 @@
         {
             "label": "try-update-template-accepting-all",
             "detail": "This task has automation steps to update the project\nbased on the template used to create it.",
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/projectUpdater.ps1",
+                "${workspaceFolder}/.conf/project-updater.xsh",
                 "${workspaceFolder}",
                 "${workspaceFolderBasename}",
                 "1"
@@ -404,7 +402,7 @@
         {
             "label": "create-production-image",
             "detail": "This task has automation steps to build the production\nDocker image. The production Docker image\nis based in the Dockerfile file.",
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "options": {
                 "env": {
@@ -418,8 +416,7 @@
                 }
             },
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/createDockerComposeProduction.ps1",
+                "${workspaceFolder}/.conf/create-docker-compose-production.xsh",
                 "${workspaceFolder}",
                 "${command:docker_login}",
                 "${command:docker_tag}",
@@ -461,9 +458,9 @@
             },
             "args": [
                 "-e",
-                "\"✅ github-actions-settings done\n",
+                "\"\u2705 github-actions-settings done\n",
                 "\n",
-                "'⚠️  ENV VARIABLES NEED TO BE SET IN CI/CD PLATFORM'\n",
+                "'\u26a0\ufe0f  ENV VARIABLES NEED TO BE SET IN CI/CD PLATFORM'\n",
                 "\tDOCKER_PSSWD\n",
                 "\tPLATFORM_CLIENT_ID\n",
                 "\tPLATFORM_CLIENT_SECRET\n",
@@ -473,7 +470,7 @@
                 "$tsc"
             ],
             "dependsOrder": "sequence",
-        "dependsOn": [],
+            "dependsOn": [],
             "icon": {
                 "id": "notebook",
                 "color": "terminal.ansiYellow"
@@ -499,9 +496,8 @@
                 }
             },
             "args": [
-                "pwsh",
-                "-nop",
-                "./.conf/torizonIO.ps1",
+                "xonsh",
+                "./.conf/torizon-io.xsh",
                 "update",
                 "fleet",
                 "latest",
@@ -512,7 +508,7 @@
                 "$tsc"
             ],
             "dependsOrder": "sequence",
-        "dependsOn": [],
+            "dependsOn": [],
             "icon": {
                 "id": "cloud-upload",
                 "color": "terminal.ansiYellow"
@@ -603,17 +599,15 @@
             "label": "run-docker-registry",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "${env:HOME}/.local/bin/xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "-file",
-                "${workspaceFolder}/.conf/runContainerIfNotExists.ps1",
-                "-ContainerRuntime",
+                "${workspaceFolder}/.conf/run-container-if-not-exists.xsh",
+                "--container-runtime",
                 "docker",
-                "-RunArguments",
+                "--run-arguments",
                 "\"-d -p 5002:5000 --restart=always registry:2\"",
-                "-ContainerName",
+                "--container-name",
                 "registry"
             ],
             "dependsOrder": "sequence",
@@ -632,17 +626,10 @@
             "label": "run-docker-registry-wsl",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "${env:HOME}/.local/bin/xonsh",
             "type": "process",
-            "options": {
-                "env": {
-                    "TASKS_USE_PWSH_INSTEAD_BASH": "true"
-                }
-            },
             "args": [
-                "-nop",
-                "-file",
-                "${workspaceFolder}/.vscode/tasks.ps1",
+                "${workspaceFolder}/.vscode/tasks.xsh",
                 "run",
                 "run-docker-registry"
             ],
@@ -662,15 +649,15 @@
             "label": "run-torizon-binfmt",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "${workspaceFolder}/.conf/runContainerIfNotExists.ps1",
-                "-ContainerRuntime",
+                "${workspaceFolder}/.conf/run-container-if-not-exists.xsh",
+                "--container-runtime",
                 "docker",
-                "-RunArguments",
+                "--run-arguments",
                 "\"--rm --privileged torizon/binfmt:latest\"",
-                "-ContainerName",
+                "--container-name",
                 "binfmt"
             ],
             "dependsOrder": "sequence",
@@ -689,11 +676,10 @@
             "label": "run-share-wsl-ports",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
-            "type": "process",
+            "command": "xonsh",
+            "type": "shell",
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/shareWSLPorts.ps1",
+                "${workspaceFolder}/.conf/share-wsl-ports.xsh",
                 "${workspaceFolder}"
             ],
             "dependsOrder": "sequence",
@@ -712,16 +698,10 @@
             "label": "run-share-wsl-ports-debug",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
-            "type": "process",
-            "options": {
-                "env": {
-                    "DEBUG_SHARED_PORTS": "true"
-                }
-            },
+            "command": "xonsh",
+            "type": "shell",
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/shareWSLPorts.ps1",
+                "${workspaceFolder}/.conf/share-wsl-ports.xsh",
                 "${workspaceFolder}"
             ],
             "dependsOrder": "sequence",
@@ -739,11 +719,10 @@
         {
             "label": "check-deps",
             "detail": "This task will check if the dependencies needed to run\nthe project are installed in the host machine.",
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/checkDeps.ps1"
+                "${workspaceFolder}/.conf/check-deps.xsh"
             ],
             "dependsOrder": "sequence",
             "icon": {
@@ -762,7 +741,7 @@
             "detail": "Reloads this VSCode window (workspace)",
             "command": "${command:workbench.action.reloadWindow}",
             "type": "process",
-        "args": [],
+            "args": [],
             "dependsOrder": "sequence",
             "icon": {
                 "id": "refresh",
@@ -779,11 +758,10 @@
             "label": "apply-torizon-packages-arm64",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/torizonPackages.ps1",
+                "${workspaceFolder}/.conf/torizon-packages.xsh",
                 "arm64"
             ],
             "dependsOrder": "sequence",
@@ -803,11 +781,10 @@
             "label": "apply-torizon-packages-arm",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/torizonPackages.ps1",
+                "${workspaceFolder}/.conf/torizon-packages.xsh",
                 "armhf"
             ],
             "dependsOrder": "sequence",
@@ -827,11 +804,10 @@
             "label": "apply-torizon-packages-amd64",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "args": [
-                "-nop",
-                "${workspaceFolder}/.conf/torizonPackages.ps1",
+                "${workspaceFolder}/.conf/torizon-packages.xhs",
                 "amd64"
             ],
             "dependsOrder": "sequence",
@@ -944,7 +920,7 @@
             "type": "process",
             "args": [
                 "-c",
-            "[[ ! -z \"${config:torizon_ip}\" ]] && true || false"
+                "[[ ! -z \"${config:torizon_ip}\" ]] && true || false"
             ],
             "dependsOrder": "sequence",
             "problemMatcher": "$msCompile",
@@ -971,7 +947,7 @@
             "type": "process",
             "args": [
                 "-c",
-            "[[ \"${config:torizon_arch}\" == \"x86_64\" ]] && true || false"
+                "[[ \"${config:torizon_arch}\" == \"x86_64\" ]] && true || false"
             ],
             "dependsOrder": "sequence",
             "problemMatcher": "$msCompile",
@@ -995,7 +971,7 @@
             "type": "process",
             "args": [
                 "-c",
-            "[[ \"${config:torizon_arch}\" == \"armv7l\" ]] && true || false"
+                "[[ \"${config:torizon_arch}\" == \"armv7l\" ]] && true || false"
             ],
             "dependsOrder": "sequence",
             "problemMatcher": "$msCompile",
@@ -1019,7 +995,7 @@
             "type": "process",
             "args": [
                 "-c",
-            "[[ \"${config:torizon_arch}\" == \"aarch64\" ]] && true || false"
+                "[[ \"${config:torizon_arch}\" == \"aarch64\" ]] && true || false"
             ],
             "dependsOrder": "sequence",
             "problemMatcher": "$msCompile",
@@ -1038,7 +1014,7 @@
         {
             "label": "containers-cleanup",
             "detail": "Docker compose down on the target (default device)",
-            "hide": false,
+            "hide": true,
             "command": "if",
             "type": "shell",
             "args": [
@@ -1222,9 +1198,7 @@
                 "--build-arg",
                 "APP_ROOT=${config:torizon_app_root}",
                 "--build-arg",
-                "IMAGE_ARCH=armhf",
-                "--build-arg",
-                "CROSS_SDK_BASE_TAG=3.5.0",
+                "IMAGE_ARCH=arm",
                 "--build-arg",
                 "DEBUG_SSH_PORT=${config:torizon_debug_ssh_port}",
                 "--build-arg",
@@ -1356,9 +1330,7 @@
                 "-t",
                 "cross-toolchain-arm-pythontos6",
                 "--build-arg",
-                "IMAGE_ARCH=armhf",
-                "--build-arg",
-                "CROSS_SDK_BASE_TAG=3.5.0",
+                "IMAGE_ARCH=arm",
                 "--build-arg",
                 "GPU=${config:torizon_gpu}",
                 "--build-arg",
@@ -1838,9 +1810,7 @@
                 "--build-arg",
                 "APP_ROOT=${config:torizon_app_root}",
                 "--build-arg",
-                "IMAGE_ARCH=armhf",
-                "--build-arg",
-                "CROSS_SDK_BASE_TAG=3.5.0",
+                "IMAGE_ARCH=arm",
                 "--build-arg",
                 "GPU=${config:torizon_gpu}",
                 "pythontos6"
@@ -2294,7 +2264,7 @@
             "label": "validate-pipeline-settings",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "options": {
                 "cwd": "${workspaceFolder}",
@@ -2311,14 +2281,13 @@
                 }
             },
             "args": [
-                "-nop",
-                ".conf/checkCIEnv.ps1"
+                ".conf/check-ci-env.xsh"
             ],
             "problemMatcher": [
                 "$tsc"
             ],
             "dependsOrder": "sequence",
-        "dependsOn": [],
+            "dependsOn": [],
             "icon": {
                 "id": "notebook",
                 "color": "terminal.ansiYellow"
@@ -2334,7 +2303,7 @@
             "label": "validate-deps-running",
             "detail": "",
             "hide": true,
-            "command": "pwsh",
+            "command": "xonsh",
             "type": "process",
             "options": {
                 "cwd": "${workspaceFolder}",
@@ -2348,14 +2317,13 @@
                 }
             },
             "args": [
-                "-nop",
-                ".conf/validateDepsRunning.ps1"
+                ".conf/validate-deps-running.xsh"
             ],
             "problemMatcher": [
                 "$tsc"
             ],
             "dependsOrder": "sequence",
-        "dependsOn": [],
+            "dependsOn": [],
             "icon": {
                 "id": "gear",
                 "color": "terminal.ansiYellow"
