--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -18,7 +18,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip pipx
-          sudo bash ./scripts/bash/setup-xonsh.sh
+          sudo bash ./.conf/setup-xonsh.sh
           sudo ln -s /root/.local/bin/xonsh /usr/bin/xonsh
 
       - name: Update torizon-utils module
