--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -30,6 +30,7 @@ jobs:
         env:
           TORIZON_ARCH: ""
           DOCKER_PSSWD: ${{ secrets.DOCKER_PSSWD }}
+          DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           PLATFORM_CLIENT_ID: ${{ secrets.PLATFORM_CLIENT_ID }}
           PLATFORM_CLIENT_SECRET: ${{ secrets.PLATFORM_CLIENT_SECRET }}
           PLATFORM_CREDENTIALS: ${{ secrets.PLATFORM_CREDENTIALS }}
@@ -66,6 +67,7 @@ jobs:
           TASKS_ITERATIVE: "False"
           TASKS_OVERRIDE_ENV: "False"
           DOCKER_PSSWD: ${{ secrets.DOCKER_PSSWD }}
+          DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           PLATFORM_CLIENT_ID: ${{ secrets.PLATFORM_CLIENT_ID }}
           PLATFORM_CLIENT_SECRET: ${{ secrets.PLATFORM_CLIENT_SECRET }}
         run: |
