--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -574,7 +574,7 @@
                 }
             },
             "presentation": {
-                "echo": false,
+                "echo": true,
                 "reveal": "always",
                 "focus": false,
                 "panel": "shared"
