--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -18,10 +18,10 @@ jobs:
 
       - name: Setup Xonsh
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-pip pipx
-          sudo bash ./.conf/setup-xonsh.sh
-          sudo ln -s /root/.local/bin/xonsh /usr/bin/xonsh
+          apt-get update
+          apt-get install -y python3 python3-pip pipx
+          bash ./.conf/setup-xonsh.sh
+          ln -s /root/.local/bin/xonsh /usr/bin/xonsh
 
       - name: Update torizon-utils module
         run: |
