--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -37,6 +37,8 @@ jobs:
           PLATFORM_CLIENT_SECRET: ${{ secrets.PLATFORM_CLIENT_SECRET }}
           PLATFORM_CREDENTIALS: ${{ secrets.PLATFORM_CREDENTIALS }}
         run: |
+
+          bash ./.conf/setup-xonsh.sh
           import os
           import json
 
