--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-24.04
     name: Build & Deploy
     container:
-      image: andreriesco/torizon-xonsh
+      image: torizonextras/torizon-dev:dev
+      options: --user root
     steps:
       - uses: actions/checkout@v4
 
