--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -20,7 +20,9 @@ jobs:
       - name: Initial Setup
         shell: xonsh {0}
         env:
-          TORIZON_ARCH: ""
+          TASKS_DISABLE_INTERACTIVE_INPUT: "True"
+          TASKS_OVERRIDE_ENV: "False"
+          TORIZON_ARCH: "arm64"
           DOCKER_PSSWD: ${{ secrets.DOCKER_PSSWD }}
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           PLATFORM_CLIENT_ID: ${{ secrets.PLATFORM_CLIENT_ID }}
@@ -56,8 +58,9 @@ jobs:
       - name: Create and Publish Image
         shell: xonsh {0}
         env:
-          TASKS_ITERATIVE: "False"
+          TASKS_DISABLE_INTERACTIVE_INPUT: "True"
           TASKS_OVERRIDE_ENV: "False"
+          TORIZON_ARCH: "arm64"
           DOCKER_PSSWD: ${{ secrets.DOCKER_PSSWD }}
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           PLATFORM_CLIENT_ID: ${{ secrets.PLATFORM_CLIENT_ID }}
@@ -71,7 +74,7 @@ jobs:
       - name: Deploy Application
         shell: xonsh {0}
         env:
-          TASKS_ITERATIVE: "False"
+          TASKS_DISABLE_INTERACTIVE_INPUT: "True"
           TASKS_OVERRIDE_ENV: "False"
           PLATFORM_CLIENT_ID: ${{ secrets.PLATFORM_CLIENT_ID }}
           PLATFORM_CLIENT_SECRET: ${{ secrets.PLATFORM_CLIENT_SECRET }}
