--- a/.github/workflows/build-application.yaml
+++ b/.github/workflows/build-application.yaml
@@ -67,7 +67,23 @@ jobs:
           PLATFORM_CLIENT_SECRET: ${{ secrets.PLATFORM_CLIENT_SECRET }}
         run: |
           env
+          xonsh ./.vscode/tasks.xsh run tcb-platform-publish
 
-          xonsh ./.vscode/tasks.xsh run docker-login
-          xonsh ./.vscode/tasks.xsh run run-torizon-binfmt
-          xonsh ./.vscode/tasks.xsh run create-production-image
+      - name: Deploy Application
+        shell: xonsh {0}
+        env:
+          TASKS_DISABLE_INTERACTIVE_INPUT: "True"
+          TASKS_OVERRIDE_ENV: "False"
+          PLATFORM_CLIENT_ID: ${{ secrets.PLATFORM_CLIENT_ID }}
+          PLATFORM_CLIENT_SECRET: ${{ secrets.PLATFORM_CLIENT_SECRET }}
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          xonsh ./.vscode/tasks.xsh run platform-update-fleet
+
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-compose-prod
+          path: |
+            docker-compose.prod.yml
+            docker-compose.prod.lock.yml
