--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,13 +22,19 @@ initial-setup:
     name: torizonextras/xonsh-wrapper:dev
 
   variables:
-    TORIZON_ARCH: ""
+    TASKS_DISABLE_INTERACTIVE_INPUT: "True"
+    TASKS_OVERRIDE_ENV: "False"
+    TORIZON_ARCH: "arm64"
 
   script: |
     echo '
 
       import os
       import json
+
+      $RAISE_SUBPROC_ERROR = True
+      $XONSH_SHOW_TRACEBACK = True
+      $UPDATE_OS_ENVIRON = True
 
       with open(".vscode/settings.json") as f:
           settings = json.load(f)
@@ -49,30 +55,6 @@ initial-setup:
     reports:
       dotenv: setup.env
 
-build-docker-image:
-  needs:
-    - initial-setup
-  stage: build
-  image:
-    name: torizonextras/xonsh-wrapper:dev
-
-  variables:
-    TASKS_ITERATIVE: "False"
-    TASKS_OVERRIDE_ENV: "False"
-
-  script: |
-    echo '
-
-      xonsh ./.vscode/tasks.xsh run docker-login
-      xonsh ./.vscode/tasks.xsh run run-torizon-binfmt
-      xonsh ./.vscode/tasks.xsh run create-production-image
-
-    ' | xonsh-wrapper.xsh
-
-  artifacts:
-    paths:
-      - docker-compose.prod.yml
-
 push-package-to-platform:
   needs:
     - initial-setup
@@ -82,14 +64,13 @@ push-package-to-platform:
     name: torizonextras/xonsh-wrapper:dev
 
   variables:
-    TASKS_ITERATIVE: "False"
+    TASKS_DISABLE_INTERACTIVE_INPUT: "True"
     TASKS_OVERRIDE_ENV: "False"
 
   script: |
     echo $PLATFORM_CREDENTIALS | base64 -d > credentials.zip
     echo '
 
-      xonsh ./.vscode/tasks.xsh run run-torizon-binfmt
       xonsh ./.vscode/tasks.xsh run tcb-platform-publish
 
     ' | xonsh-wrapper.xsh
@@ -112,7 +93,7 @@ update-fleet:
     name: torizonextras/xonsh-wrapper:dev
 
   variables:
-    TASKS_ITERATIVE: "False"
+    TASKS_DISABLE_INTERACTIVE_INPUT: "True"
     TASKS_OVERRIDE_ENV: "False"
 
   script: |
