--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -406,6 +406,8 @@
             "type": "process",
             "options": {
                 "env": {
+                    "DOCKER_REGISTRY": "${command:docker_registry}",
+                    "DOCKER_LOGIN": "${command:docker_login}",
                     "DOCKER_PSSWD": "${command:docker_password}",
                     "TORIZON_ARCH": "${input:archList}",
                     "APP_ROOT": "${config:torizon_app_root}",
@@ -418,9 +420,7 @@
             "args": [
                 "${workspaceFolder}/.conf/create-docker-compose-production.xsh",
                 "${workspaceFolder}",
-                "${command:docker_login}",
                 "${command:docker_tag}",
-                "${command:docker_registry}",
                 "pythontos6",
                 "${config:torizon_gpu}"
             ],
@@ -565,34 +565,28 @@
         {
             "label": "docker-login",
             "detail": "Perform a docker login on the host",
-            "command": "DOCKER_HOST=",
+            "command": "xonsh",
             "type": "shell",
             "options": {
                 "env": {
+                    "DOCKER_PSSWD": "${command:docker_password}",
                     "DOCKER_LOGIN": "${command:docker_login}",
-                    "DOCKER_PSSWD": "${command:docker_password}"
+                    "DOCKER_REGISTRY": "${command:docker_registry}"
                 }
             },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared"
-            },
             "args": [
-                "echo",
-                "$DOCKER_PSSWD",
-                "|",
-                "docker",
-                "login",
-                "--username",
-                "$DOCKER_LOGIN",
-                "--password-stdin"
+                "${workspaceFolder}/.conf/docker-login.xsh"
             ],
             "dependsOrder": "sequence",
             "icon": {
                 "id": "account",
                 "color": "terminal.ansiCyan"
+            },
+            "presentation": {
+                "echo": false,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
             }
         },
         {
@@ -807,7 +801,7 @@
             "command": "xonsh",
             "type": "process",
             "args": [
-                "${workspaceFolder}/.conf/torizon-packages.xhs",
+                "${workspaceFolder}/.conf/torizon-packages.xsh",
                 "amd64"
             ],
             "dependsOrder": "sequence",
